change colors and make responsive better on homepage

--- a/src/assets/scss/base/_color.scss
+++ b/src/assets/scss/base/_color.scss
@@ -17,6 +17,9 @@ $colors: (
     400: hsl(339, 75%, 47%),
     500: hsl(339, 90%, 30%),
   ),
+  blue: (
+    100: #22395c,
+  ),
   neutral: (
     100: hsl(0 0% 100%),
     200: #fffbf5,
