--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -60,14 +60,14 @@ import { Icon } from 'astro-icon'
         width: 30px;
 
         path {
-          fill: var(--primary-400);
+          fill: var(--blue-100);
           transition: fill 0.2s ease-in-out;
         }
       }
 
       &:hover {
         [astro-icon] path {
-          fill: var(--primary-400);
+          fill: var(--blue--100);
         }
       }
     }
