--- a/src/pages/carte.astro
+++ b/src/pages/carte.astro
@@ -10,7 +10,7 @@ import { Image } from 'astro:assets'
       <h1>Notre carte</h1>
       <p>Découvrez nos délicieux plats</p>
     </div>
-    <h2 class="mx-14 my-10">Plats 음식</h2>
+    <h2 class="mx-14 my-10 text-yogi-blue">Plats 음식</h2>
     <div class="mx-10 flex items-center justify-center">
       <div class="mx-4 grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
         {
@@ -37,7 +37,7 @@ import { Image } from 'astro:assets'
     </div>
 
     <div>
-      <h2 class="mx-14 mt-10">Combos 콤보</h2>
+      <h2 class="mx-14 mt-10 text-yogi-blue">Combos 콤보</h2>
       <p class="mx-14">Les Combos sont disponibles uniquement le midi</p>
       <div class="mx-10 my-20 flex items-center justify-center">
         <div class="mx-4 grid grid-cols-1 gap-20 md:grid-cols-2">
@@ -62,7 +62,7 @@ import { Image } from 'astro:assets'
     </div>
 
     <div>
-      <h2 class="mx-14 mt-10">Dochirak 도시락</h2>
+      <h2 class="mx-14 mt-10 text-yogi-blue">Dochirak 도시락</h2>
       <p class="mx-14">À emporter uniquement</p>
       <div class="mx-10 my-20 flex items-center justify-center">
         <div class="mx-4 grid grid-cols-1 gap-20 md:grid-cols-2">
@@ -99,7 +99,7 @@ import { Image } from 'astro:assets'
     </div>
 
     <div>
-      <h2 class="mx-14 mt-10">Banchan 반찬</h2>
+      <h2 class="mx-14 mt-10 text-yogi-blue">Banchan 반찬</h2>
       <div class="mx-10 my-20 flex items-center justify-center">
         <a
           href="https://deliveroo.fr/fr/menu/Amiens/saint-germain-les-halles-saint-leu-notre-dame/yogi-19-rue-de-metz/?geohash=u0ceggbg1c5e&item-id=1491669033"
@@ -119,7 +119,7 @@ import { Image } from 'astro:assets'
     </div>
 
     <div>
-      <h2 class="mx-14 mt-10">Boissons 음료</h2>
+      <h2 class="mx-14 mt-10 text-yogi-blue">Boissons 음료</h2>
       <div class="mx-14 my-20">
         <p>Coréenne - 3,50€</p>
         <p>San Pellegrino 33cl, orange sanguine/orange/menthe & citron - 2,10€</p>
@@ -133,7 +133,7 @@ import { Image } from 'astro:assets'
     </div>
 
     <div>
-      <h2 class="mx-14 mt-10">Desserts 디저트</h2>
+      <h2 class="mx-14 mt-10 text-yogi-blue">Desserts 디저트</h2>
       <div class="mx-14 my-20">
         <p>Cookie + Glace - 5,50€</p>
         <p>Croissant garni - 5€</p>
