--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import tteokbokki from './assets/img/tteokbokki.jpg'
   <Hero />
   <section class="my-64">
     <div class="container">
-      <h2 class="mb-16 text-6xl">Notre cuisine est...</h2>
+      <h2 class="mb-16 text-6xl text-yogi-blue">Notre cuisine est...</h2>
       <div class="grid grid-cols-1 gap-12 md:grid-cols-2 lg:grid-cols-3">
         <Feature icon="ph:heart-bold" title="SAINE">
           LA STREET FOOD CORÉENNE EST SAINE, VOUS PERMETTANT DE VOUS FAIRE PLAISIR SANS VOUS FAIRE DE MAL.
@@ -39,11 +39,11 @@ import tteokbokki from './assets/img/tteokbokki.jpg'
   </section>
 
   <div class="container">
-    <h2 class="mb-2 text-6xl">Nos plats phares</h2>
+    <h2 class="mb-2 text-6xl text-yogi-blue">Nos plats phares</h2>
     <ContentMedia
       imgSrc="https://res.cloudinary.com/jimymltta/image/upload/v1705073726/Yogi%20Food/BibimBap_cvgb9k.jpg"
     >
-      <h2>Bibimbab 비빔밥</h2>
+      <h2 class="text-yogi-blue">Bibimbab 비빔밥</h2>
       <p class="text-2xl">
         Le Bibimbap est un plat coréen composé de riz, légumes sautés, viande (souvent du bœuf), un œuf et sauce
         gochujang (piquante). Les ingrédients sont disposés sur le riz, offrant une présentation colorée. Servi dans un
@@ -55,7 +55,7 @@ import tteokbokki from './assets/img/tteokbokki.jpg'
       imgSrc="https://res.cloudinary.com/jimymltta/image/upload/v1705073726/Yogi%20Food/Ddeokbokki_porx6d.jpg"
       reverseImg={true}
     >
-      <h2>Ddeokbokki 떡볶이</h2>
+      <h2 class="text-yogi-blue">Ddeokbokki 떡볶이</h2>
       <p class="text-2xl">
         Le Ddeokbokki est un plat populaire coréen composé de gâteaux de riz longs et cylindriques, épicés et enrobés
         d'une sauce rouge épaisse et sucrée. Ce plat est souvent agrémenté d'autres ingrédients comme des œufs durs, des
