--- a/src/components/Feature.astro
+++ b/src/components/Feature.astro
@@ -7,7 +7,7 @@ const { icon = 'mdi:rocket', title = 'Title' } = Astro.props
 <div class="feature flex flex-col gap-4">
   <Icon name={icon} />
   <div class="content">
-    <h3>{title}</h3>
+    <h3 class="text-yogi-blue">{title}</h3>
     <p>
       <slot>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, corporis.</slot>
     </p>
