--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,27 +5,45 @@ const { src = 'https://res.cloudinary.com/jimymltta/image/upload/v1706219526/Yog
   Astro.props
 ---
 
-<section class="relative h-screen bg-center bg-no-repeat bg-cover" style={{ backgroundImage: `url(${src})` }}>
-  <div class="flex flex-col items-center justify-center h-full">
+<section class="custom-background relative bg-cover bg-center bg-no-repeat" style={{ backgroundImage: `url(${src})` }}>
+  <div class="flex h-full flex-col items-center justify-center">
     <div>
-      <div class="flex flex-col gap-3 min-[500px]:flex-row mt-12">
-          <a
-            class="button has-icon"
-            href="https://deliveroo.fr/fr/menu/Amiens/saint-germain-les-halles-saint-leu-notre-dame/yogi-19-rue-de-metz?geohash=u0ceggbg1c5e"
-          >
-            <Icon pack="ic" name="outline-food-bank" />
-            Commander
-          </a>
-          <a class="button has-icon color-primary" href="/carte">
-            <Icon pack="jam" name="document" />
-            Voir le menu
-          </a>
-        </div>
+      <div class="button-container mt-12 flex flex-col gap-3 sm:flex-row">
+        <a
+          class="button has-icon"
+          href="https://deliveroo.fr/fr/menu/Amiens/saint-germain-les-halles-saint-leu-notre-dame/yogi-19-rue-de-metz?geohash=u0ceggbg1c5e"
+        >
+          <Icon pack="ic" name="outline-food-bank" />
+          Commander
+        </a>
+        <a class="button has-icon color-primary" href="/carte">
+          <Icon pack="jam" name="document" />
+          Voir le menu
+        </a>
+      </div>
     </div>
   </div>
 </section>
 
 <style lang="scss">
+  .custom-background {
+    height: 100vh;
+    width: 100vw;
+  }
+
+  .button-container {
+    @media (max-width: 768px) {
+      flex-direction: column;
+    }
+  }
+
+  .button {
+    @media (max-width: 768px) {
+      font-size: 14px;
+      padding: 10px 20px;
+    }
+  }
+
   .text-gradient {
     color: var(--primary-400);
   }
