--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -278,7 +278,7 @@ import logo from '../assets/img/logo-yogi-food.png'
           font-size: 1.125rem;
           line-height: 1.6875rem;
           transition: color 0.15s ease-in-out;
-          color: var(--primary-400);
+          color: var(--blue-100);
         }
 
         a:hover,
@@ -329,13 +329,13 @@ import logo from '../assets/img/logo-yogi-food.png'
         padding: 0;
         margin-top: -1px;
         border: none;
-        color: var(--primary-400);
+        color: var(--blue-100);
 
         &:hover {
-          color: var(--primary-400);
+          color: var(--blue-100);
 
           &::after {
-            border-color: var(--primary-400);
+            border-color: var(--blue-100);
           }
         }
 
@@ -346,7 +346,7 @@ import logo from '../assets/img/logo-yogi-food.png'
           margin-top: -0.25rem;
           border-style: solid;
           border-width: 0.2em 0.2em 0 0;
-          border-color: var(--primary-400);
+          border-color: var(--blue-100);
           transform: rotate(135deg);
         }
 
@@ -391,13 +391,13 @@ import logo from '../assets/img/logo-yogi-food.png'
     }
 
     svg path {
-      fill: var(--primary-400);
+      fill: var(--blue-100);
       transition: fill 0.2s ease-in-out;
     }
 
     &:hover {
       svg path {
-        fill: var(--primary-400);
+        fill: var(--blue-100);
       }
     }
 
