--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,22 +17,22 @@ import tteokbokki from './assets/img/tteokbokki.jpg'
       <h2 class="mb-16 text-6xl text-yogi-blue">Notre cuisine est...</h2>
       <div class="grid grid-cols-1 gap-12 md:grid-cols-2 lg:grid-cols-3">
         <Feature icon="ph:heart-bold" title="SAINE">
-          LA STREET FOOD CORÉENNE EST SAINE, VOUS PERMETTANT DE VOUS FAIRE PLAISIR SANS VOUS FAIRE DE MAL.
+          <b>LA STREET FOOD CORÉENNE EST SAINE, VOUS PERMETTANT DE VOUS FAIRE PLAISIR SANS VOUS FAIRE DE MAL.</b>
         </Feature>
         <Feature icon="ph:leaf-bold" title="DE SAISON">
-          NOUS N'UTILISONS QUE DES PRODUITS DE SAISON, POUR VOUS GARANTIR UNE FRAÎCHEUR OPTIMALE.
+          <b>NOUS N'UTILISONS QUE DES PRODUITS DE SAISON, POUR VOUS GARANTIR UNE FRAÎCHEUR OPTIMALE.</b>
         </Feature>
         <Feature icon="ph:fork-knife" title="GOURMANDE">
-          NOUS VOUS PROPOSONS DES PLATS GOURMANDS, QUI VOUS FERONT VOYAGER EN CORÉE.
+          <b>NOUS VOUS PROPOSONS DES PLATS GOURMANDS, QUI VOUS FERONT VOYAGER EN CORÉE.</b>
         </Feature>
         <Feature icon="mdi:clock-fast" title="RAPIDE">
-          SI VOUS ÊTES PRÉSSÉ.E, PAS D'INQUIÉTUDE, NOUS VOUS SERVONS EN MOINS DE 20 MINUTES.
+          <b>SI VOUS ÊTES PRÉSSÉ.E, PAS D'INQUIÉTUDE, NOUS VOUS SERVONS EN MOINS DE 20 MINUTES.</b>
         </Feature>
         <Feature icon="tabler:thumb-up" title="PRATIQUE">
-          NOS PLATS SONT PRATIQUES : VOUS POUVEZ LES MANGER SUR PLACE, À EMPORTER OU EN LIVRAISON.
+          <b>NOS PLATS SONT PRATIQUES : VOUS POUVEZ LES MANGER SUR PLACE, À EMPORTER OU EN LIVRAISON.</b>
         </Feature>
         <Feature icon="emojione-monotone:face-savouring-delicious-food" title="BONNE">
-          MAIS SURTOUT, NOTRE CUISINE EST BONNE, ET C'EST BIEN LÀ LE PLUS IMPORTANT.
+          <b>MAIS SURTOUT, NOTRE CUISINE EST BONNE, ET C'EST BIEN LÀ LE PLUS IMPORTANT.</b>
         </Feature>
       </div>
     </div>
