--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -52,20 +52,20 @@ const {
         --font-color: var(--neutral-900);
         --action-color: var(--primary-400);
         --action-color-state: var(--primary-400);
-        --background: var(--neutral-100);
+        --background: var(--neutral-200);
         --primary-background: var(--primary-400);
         --neutral-background: var(--neutral-200);
       }
 
       // dark color scheme overrides
-      .darkmode {
-        --font-color: var(--neutral-100);
-        --action-color: var(--secondary-400);
-        --action-color-state: var(--secondary-300);
-        --background: var(--dark-100);
-        --primary-background: var(--primary-500);
-        --neutral-background: var(--neutral-900);
-      }
+      // .darkmode {
+      //   --font-color: var(--neutral-100);
+      //   --action-color: var(--secondary-400);
+      //   --action-color-state: var(--secondary-300);
+      //   --background: var(--dark-100);
+      //   --primary-background: var(--primary-500);
+      //   --neutral-background: var(--neutral-900);
+      // }
 
       // sticky footer on low content pages
       html,
