--- a/src/pages/saison.astro
+++ b/src/pages/saison.astro
@@ -3,18 +3,18 @@ import DefaultLayout from '../layouts/DefaultLayout.astro'
 ---
 
 <DefaultLayout>
-  <div class="mx-14 my-10">
+  <div class="my-10 mx-14">
     <h1>Nos plats de saison</h1>
-    <div class="mx-10 my-20 flex items-center justify-center">
-      <div class="mx-4 grid grid-cols-1 gap-20 md:grid-cols-2">
+    <div class="flex items-center justify-center mx-10 my-20">
+      <div class="grid grid-cols-1 gap-20 mx-4 md:grid-cols-2">
         <a href="">
-          <div class="rounded border border-white p-10">
+          <div class="p-10 border border-white rounded">
             <h4>BibimMyun</h4>
             <span>13,70€</span>
           </div>
         </a>
         <a href="">
-          <div class="rounded border border-white p-10">
+          <div class="p-10 border border-white rounded">
             <h4>Doenjang Jjigae</h4>
             <span>14€</span>
           </div>
@@ -22,14 +22,14 @@ import DefaultLayout from '../layouts/DefaultLayout.astro'
         <a
           href="https://deliveroo.fr/fr/menu/Amiens/saint-germain-les-halles-saint-leu-notre-dame/yogi-19-rue-de-metz/?geohash=u0ceggbg1c5e&item-id=1491669034"
         >
-          <div class="rounded border border-white p-10">
-            <h4>SambBap</h4>
+          <div class="p-10 border border-white rounded">
+            <h4 class="font-bold">SAMBBAP</h4>
             <span>14€</span>
           </div>
         </a>
         <a href="">
-          <div class="rounded border border-white p-10">
-            <h4>Kimchi Riz</h4>
+          <div class="p-10 border border-white rounded">
+            <h4 class="font-bold">KIMCHI RIZ</h4>
             <span>12€</span>
           </div>
         </a>
