--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -22,7 +22,7 @@ import logo from '../assets/img/logo-yogi-food.png'
           <slot />
         </ul>
       </nav>
-      <DarkMode />
+      <!-- <DarkMode /> -->
       <ResponsiveToggle />
     </div>
     <nav class="mobile-menu" aria-label="Main navigation mobile">
