--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,8 +31,8 @@ import tteokbokki from './assets/img/tteokbokki.jpg'
         <Feature icon="tabler:thumb-up" title="PRATIQUE">
           <b>NOS PLATS SONT PRATIQUES : VOUS POUVEZ LES MANGER SUR PLACE, À EMPORTER OU EN LIVRAISON.</b>
         </Feature>
-        <Feature icon="emojione-monotone:face-savouring-delicious-food" title="BONNE">
-          <b>MAIS SURTOUT, NOTRE CUISINE EST BONNE, ET C'EST BIEN LÀ LE PLUS IMPORTANT.</b>
+        <Feature icon="emojione-monotone:face-savouring-delicious-food" title="AUTHENTIQUE">
+          <b>FAIT MAISON ET PAR FAIT PAR UN CORÉEN.</b>
         </Feature>
       </div>
     </div>
