fix menu, add halal and homemade images and add delivery banner

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -41,6 +41,9 @@ import { Icon } from 'astro-icon'
     <a href="tel:0322809316">03 22 80 93 16</a>
   </Navigation>
 </header>
+<div class="p-4 bg-white shadow-md">
+  <h4 class="text-lg font-bold text-center">Votre plat à emporter : notre spécialité</h4>
+</div>
 
 <style lang="scss" is:global>
   @use '../assets/scss/base/outline' as *;
