--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -65,14 +65,18 @@ import tteokbokki from './assets/img/tteokbokki.jpg'
     </ContentMedia>
   </div>
 
-  <!-- <section class="mt-64 mb-32">
-    <h2 class="mb-16 text-6xl">À remplacer par des photos de plats</h2>
-    <div class="grid grid-cols-1 gap-12 sm:grid-cols-2 md:grid-cols-4"> -->
-  <!-- <Counter count="130" src={} title="Plat 1" sub="On GitHub" />
-      <Counter count="17" src={} title="Plat 2" sub="Components" />
-      <Counter count="500" src={} title="Plat 3" sub="Merged" />
-      <Counter count="18+" src={} title="Plat 4" sub="Since launch" /> -->
-  <!-- <Media src={tteokbokki} class="rounded-lg aspect-square" /> -->
-  <!-- </div>
-  </section> -->
+  <section class="container">
+    <h4>Tous nos plats sont fait maison et halal</h4>
+    <div class="flex items-center justify-center">
+      <div class="flex flex-col md:flex-row">
+        <ContentMedia
+          class="mb-4 md:mb-0 md:mr-4"
+          imgSrc="https://res.cloudinary.com/jimymltta/image/upload/v1706634156/Yogi%20Food/halal_uxvysq.png"
+        />
+        <ContentMedia
+          imgSrc="https://res.cloudinary.com/jimymltta/image/upload/v1706634156/Yogi%20Food/homemade_hkqney.png"
+        />
+      </div>
+    </div>
+  </section>
 </DefaultLayout>
