--- a/src/components/Map.astro
+++ b/src/components/Map.astro
@@ -1,10 +1,8 @@
 <iframe
-  src="https://www.google.com/maps/place/19+Rue+de+Metz,+80000+Amiens/@49.8951341,2.2895048,17z/data=!3m1!4b1!4m6!3m5!1s0x47e7843fbb7671f5:0xe77739a345cbdcfc!8m2!3d49.8951307!4d2.2943757!16s%2Fg%2F11c2gjlqps?entry=ttu"
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2570.1954332387486!2d2.2918007766414323!3d49.89513412719206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e7859514863471%3A0x375bb7a662678522!2sYOGI!5e0!3m2!1sfr!2sfr!4v1706648485845!5m2!1sfr!2sfr"
   width="600"
   height="450"
-  style="border:0"
+  style="border:0;"
+  allowfullscreen=""
   loading="lazy"
-  allowfullscreen
-  referrerpolicy="no-referrer-when-downgrade"
->
-</iframe>
+  referrerpolicy="no-referrer-when-downgrade"></iframe>
