--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -5,6 +5,7 @@
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 
   @media (prefers-reduced-motion: reduce) {
     scroll-behavior: auto;
