--- a/src/components/SiteMeta.astro
+++ b/src/components/SiteMeta.astro
@@ -1,7 +1,7 @@
 ---
 const { title, description, url, image, author } = Astro.props
 
-let subtitle = 'Accessible Astro Starter'
+let subtitle = 'YOGI - La street food coréenne à Amiens'
 ---
 
 <!-- general meta -->
