--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -5,7 +5,6 @@
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
-  overflow-x: hidden;
 
   @media (prefers-reduced-motion: reduce) {
     scroll-behavior: auto;
@@ -55,7 +54,7 @@ textarea {
   font: inherit;
 }
 
-input[type="text"],
+input[type='text'],
 textarea {
   width: 100%;
 }
@@ -116,7 +115,7 @@ noscript {
   margin-bottom: 1em;
 }
 
-[tabindex="-1"] {
+[tabindex='-1'] {
   outline: none !important;
   box-shadow: none !important;
 }
