--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -77,6 +77,7 @@ const {
         flex-direction: column;
         color: var(--font-color);
         background-color: var(--background);
+        position: relative;
 
         main {
           flex: 1 0 auto;
