make features section look better

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,24 +15,34 @@ import tteokbokki from './assets/img/tteokbokki.jpg'
   <section class="my-32">
     <div class="container">
       <h2 class="mb-16 text-6xl text-yogi-blue">Notre cuisine est...</h2>
-      <div class="grid grid-cols-1 gap-12 md:grid-cols-2 lg:grid-cols-3">
-        <Feature icon="ph:heart-bold" title="SAINE">
-          <b>LA STREET FOOD CORÉENNE EST SAINE, VOUS PERMETTANT DE VOUS FAIRE PLAISIR SANS VOUS FAIRE DE MAL.</b>
+      <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-3">
+        <Feature icon="ph:heart-bold" title="SAINE" class="text-sm md:text-base lg:text-lg">
+          <p class="text-sm md:text-base lg:text-lg">
+            <b>LA STREET FOOD CORÉENNE EST SAINE, VOUS PERMETTANT DE VOUS FAIRE PLAISIR SANS VOUS FAIRE DE MAL.</b>
+          </p>
         </Feature>
         <Feature icon="ph:leaf-bold" title="DE SAISON">
-          <b>NOUS N'UTILISONS QUE DES PRODUITS DE SAISON, POUR VOUS GARANTIR UNE FRAÎCHEUR OPTIMALE.</b>
+          <p class="text-sm md:text-base lg:text-lg">
+            <b>NOUS N'UTILISONS QUE DES PRODUITS DE SAISON, POUR VOUS GARANTIR UNE FRAÎCHEUR OPTIMALE.</b>
+          </p>
         </Feature>
         <Feature icon="ph:fork-knife" title="GOURMANDE">
-          <b>NOUS VOUS PROPOSONS DES PLATS GOURMANDS, QUI VOUS FERONT VOYAGER EN CORÉE.</b>
+          <p class="text-sm md:text-base lg:text-lg">
+            <b>NOUS VOUS PROPOSONS DES PLATS GOURMANDS, QUI VOUS FERONT VOYAGER EN CORÉE.</b>
+          </p>
         </Feature>
         <Feature icon="mdi:clock-fast" title="RAPIDE">
-          <b>SI VOUS ÊTES PRÉSSÉ.E, PAS D'INQUIÉTUDE, NOUS VOUS SERVONS EN MOINS DE 20 MINUTES.</b>
+          <p class="text-sm md:text-base lg:text-lg">
+            <b>SI VOUS ÊTES PRÉSSÉ.E, PAS D'INQUIÉTUDE, NOUS VOUS SERVONS EN MOINS DE 20 MINUTES.</b>
+          </p>
         </Feature>
         <Feature icon="tabler:thumb-up" title="PRATIQUE">
-          <b>NOS PLATS SONT PRATIQUES : VOUS POUVEZ LES MANGER SUR PLACE, À EMPORTER OU EN LIVRAISON.</b>
+          <p class="text-sm md:text-base lg:text-lg">
+            <b>NOS PLATS SONT PRATIQUES : VOUS POUVEZ LES MANGER SUR PLACE, À EMPORTER OU EN LIVRAISON.</b>
+          </p>
         </Feature>
         <Feature icon="emojione-monotone:face-savouring-delicious-food" title="AUTHENTIQUE">
-          <b>FAIT MAISON ET PAR FAIT PAR UN CORÉEN.</b>
+          <p class="text-sm md:text-base lg:text-lg"><b>FAIT MAISON ET PAR FAIT PAR UN CORÉEN.</b></p>
         </Feature>
       </div>
     </div>
