--- a/src/components/Feature.astro
+++ b/src/components/Feature.astro
@@ -4,7 +4,7 @@ import { Icon } from 'astro-icon'
 const { icon = 'mdi:rocket', title = 'Title' } = Astro.props
 ---
 
-<div class="feature flex flex-col gap-4">
+<div class="flex flex-col gap-4 feature">
   <Icon name={icon} />
   <div class="content">
     <h3 class="text-yogi-blue">{title}</h3>
