fix spaces on menu page

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -15,7 +15,9 @@ import Map from '../components/Map.astro'
       <div class="sm:w-2/3">
         <h5 class="mb-3 text-lg">Téléphone : 03 22 80 93 16</h5>
         <h5 class="mb-3 text-lg">Adresse : 19 rue de Metz, 80000 Amiens</h5>
-        <h5 class="mb-3 text-lg">Horaires : du lundi au vendredi de 12h à 15h et 17h à 22h</h5>
+        <h5 class="mb-3 text-lg">
+          Horaires : du mardi au samedi de 12h à 14h30 et 17h30 à 22h <br />Fermé le dimanche et le lundi
+        </h5>
       </div>
       <div class="mt-8 sm:mt-0">
         <Map />
