--- a/src/pages/carte.astro
+++ b/src/pages/carte.astro
@@ -45,7 +45,7 @@ import { Image } from 'astro:assets'
         <a
           href="https://deliveroo.fr/fr/menu/Amiens/saint-germain-les-halles-saint-leu-notre-dame/yogi-19-rue-de-metz/?geohash=u0ceggbg1c5e&item-id=1491669054"
         >
-          <div class="p-10 border border-white rounded">
+          <div class="border border-white rounded">
             <h4 class="font-bold">TOPOKI 떡볶이 + DEMI KIMBAP 김밥</h4>
             <span>10,50€</span>
           </div>
@@ -53,7 +53,7 @@ import { Image } from 'astro:assets'
         <a
           href="https://deliveroo.fr/fr/menu/Amiens/saint-germain-les-halles-saint-leu-notre-dame/yogi-19-rue-de-metz/?geohash=u0ceggbg1c5e&item-id=1491669054"
         >
-          <div class="p-10 border border-white rounded">
+          <div class="border-white rounded order ">
             <h4 class="font-bold">RAMEN + DEMI KIMBAP 김밥</h4>
             <span>11€</span>
           </div>
@@ -64,11 +64,11 @@ import { Image } from 'astro:assets'
     <h2 class="mt-12 mx-14 text-yogi-blue">Dochirak 도시락</h2>
     <p class="mx-14">À emporter uniquement</p>
     <div class="flex items-center justify-center mx-10 my-6">
-      <div class="grid grid-cols-1 gap-6 mx-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+      <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
         <a
           href="https://deliveroo.fr/fr/menu/Amiens/saint-germain-les-halles-saint-leu-notre-dame/yogi-19-rue-de-metz/?geohash=u0ceggbg1c5e&item-id=1491669045"
         >
-          <div class="p-10">
+          <div >
             <img
               src="https://res.cloudinary.com/jimymltta/image/upload/v1705073726/Yogi%20Food/Bulgogi_flgeaq.jpg"
               width="500"
@@ -82,7 +82,7 @@ import { Image } from 'astro:assets'
         <a
           href="https://deliveroo.fr/fr/menu/Amiens/saint-germain-les-halles-saint-leu-notre-dame/yogi-19-rue-de-metz/?geohash=u0ceggbg1c5e&item-id=1491669049"
         >
-          <div class="p-10">
+          <div >
             <img
               src="https://res.cloudinary.com/jimymltta/image/upload/v1705073717/Yogi%20Food/Spam_m6fkyj.jpg"
               width="500"
