--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -143,7 +143,7 @@ import tteokbokki from './assets/img/tteokbokki.jpg'
       Nos plats phares
     </h2>
     <ContentMedia
-      imgSrc="https://res.cloudinary.com/jimymltta/image/upload/v1705073726/Yogi%20Food/BibimBap_cvgb9k.jpg"
+      imgSrc="https://res.cloudinary.com/jimymltta/image/upload/v1710883530/Yogi%20Food/Yogi_Bibimbap_zljah3.jpg"
     >
       <h2 class="text-yogi-blue">Bibimbab 비빔밥</h2>
       <p class="text-xl">
