fix mobile banner in hero component

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,7 +3,8 @@ import { Icon } from 'astro-icon'
 
 const {
   desktopImg = 'https://res.cloudinary.com/jimymltta/image/upload/v1710884769/Yogi%20Food/yogi-banner_ihpoxn.png',
-  mobileImg = 'https://res.cloudinary.com/jimymltta/image/upload/v1710884762/Yogi%20Food/yogi-mobile-banner_kfqj04.png',
+  // mobileImg = 'https://res.cloudinary.com/jimymltta/image/upload/v1710884762/Yogi%20Food/yogi-mobile-banner_kfqj04.png',
+  mobileImg = 'https://res.cloudinary.com/jimymltta/image/upload/v1718355893/Yogi%20Food/yogi_mobile_banner_wmar7g.png'
 } = Astro.props
 ---
 
@@ -16,7 +17,7 @@ const {
     background-image: url(https://res.cloudinary.com/jimymltta/image/upload/v1710884762/Yogi%20Food/yogi-mobile-banner_kfqj04.png);
 
     @media (max-width: 768px) {
-      background-image: url(https://res.cloudinary.com/jimymltta/image/upload/v1710884762/Yogi%20Food/yogi-mobile-banner_kfqj04.png);
+      background-image: url(https://res.cloudinary.com/jimymltta/image/upload/v1718355893/Yogi%20Food/yogi_mobile_banner_wmar7g.png);
     }
   }
 
