start menu update

--- a/src/pages/carte.astro
+++ b/src/pages/carte.astro
@@ -112,8 +112,27 @@ import { Icon } from 'astro-icon'
               height="250"
               class="object-cover h-auto mb-6 aspect-square"
             />
-            <h4 class="font-bold">OMELETTE ROULÉE</h4>
+            <h4 class="font-bold">WANJA</h4>
+            <p>Galets boeuf haché, oeuf, gingembre, ail, oignon - 3 pièces</p>
             <span>6,50€</span>
+          </div>
+        </a>
+        <a
+          href="https://deliveroo.fr/fr/menu/Amiens/saint-germain-les-halles-saint-leu-notre-dame/yogi-19-rue-de-metz/?geohash=u0ceggbg1c5e&item-id=1491669033"
+        >
+          <div class="p-10">
+            <h4 class="font-bold">KIMCHI <Icon name="emojione:hot-pepper" size="32" /></h4>
+            <p>Légumes marinés sauce pimentée | radis ou concombre ou choux selon la disponibilité</p>
+            <span>3€</span>
+          </div>
+        </a>
+        <a
+          href="https://deliveroo.fr/fr/menu/Amiens/saint-germain-les-halles-saint-leu-notre-dame/yogi-19-rue-de-metz/?geohash=u0ceggbg1c5e&item-id=1491669033"
+        >
+          <div class="p-10">
+            <h4 class="font-bold">BAP</h4>
+            <p>Bol de riz</p>
+            <span>1€</span>
           </div>
         </a>
       </div>
@@ -121,21 +140,22 @@ import { Icon } from 'astro-icon'
 
     <h2 class="mt-12 mx-14 text-yogi-blue">Boissons 음료</h2>
     <div class="my-6 mx-14">
-      <p><span class="font-bold">Coréenne</span> - 3,50€</p>
-      <p><span class="font-bold">San Pellegrino 33cl, orange sanguine/orange/menthe & citron</span> - 2,10€</p>
-      <p><span class="font-bold">San Pellegrino 33cl, eau gazeuse</span> - 1,90€</p>
-      <p><span class="font-bold">Coca-Cola</span> - 1,90€</p>
-      <p><span class="font-bold">Sprite</span> - 1,90€</p>
-      <p><span class="font-bold">Evian 50cl</span> - 1,90€</p>
-      <p><span class="font-bold">Café coréen</span> - 2€</p>
+      <p><span class="font-bold">Coréenne</span> - 4,50€</p>
+      <p><span class="font-bold">San Pellegrino 33cl, agrumes</span> - 3€</p>
+      <p><span class="font-bold">San Pellegrino 33cl, eau gazeuse</span> - 3€</p>
+      <p><span class="font-bold">Coca-Cola/Pepsi</span> - 2,90€</p>
+      <p><span class="font-bold">Sprite</span> - 2,90€</p>
+      <p><span class="font-bold">Oasis</span> - 2,90€</p>
+      <p><span class="font-bold">Café coréen</span> - 2,70€</p>
+      <p><span class="font-bold">Tisane Yuja 유자차</span> - 4,50€</p>
+      <p><span class="font-bold">Ice café latte coréen</span> - 4,50€</p>
     </div>
 
     <h2 class="mt-12 mx-14 text-yogi-blue">Desserts 디저트</h2>
     <div class="my-6 mx-14">
-      <p><span class="font-bold">Fondant au chocolat</span> - 6,50€</p>
       <p><span class="font-bold">Incontournable cheesecake</span> - 6,50€</p>
-      <p><span class="font-bold">Rondement citron</span> - 6,50€</p>
       <p><span class="font-bold">Soufflé glacé mango coco</span> - 6,50€</p>
+      <p><span class="font-bold">Fondant au chocolat</span> - 6,50€</p>
     </div>
   </section>
 </DefaultLayout>
