update footer cta

--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -16,7 +16,7 @@
 <style lang="scss">
   .call-to-action {
     color: var(--neutral-900);
-    background-image: linear-gradient(40deg, var(--primary-400), var(--primary-400));
+    /*background-image: linear-gradient(40deg, var(--primary-400), var(--primary-400));*/
   }
 
   .call-to-action a:not(button),
