--- a/src/pages/carte.astro
+++ b/src/pages/carte.astro
@@ -1,6 +1,6 @@
 ---
 import DefaultLayout from '../layouts/DefaultLayout.astro'
-import { menuItems } from '../data/newMenu.js'
+import { menuItems } from '../data/menuItems.js'
 import { Image } from 'astro:assets'
 import { Icon } from 'astro-icon'
 ---
