--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,6 @@
 ---
-import DefaultLayout from '../layouts/DefaultLayout.astro'
-import Hero from '../components/Hero.astro'
-import Feature from '../components/Feature.astro'
-// import Counter from '../components/Counter.astro'
-import ContentMedia from '../components/ContentMedia.astro'
-
-import { Media } from 'accessible-astro-components'
-
-import tteokbokki from './assets/img/tteokbokki.jpg'
+// Redirection vers la page de maintenance
+return Astro.redirect('/maintenance');
 ---
 
 <!-- <DefaultLayout title="Home">
